# picsim

./: .gitignore  DEPLOY.md  PROJECT_PROMPT.md  README.md  STATUS.md  embed-core.js  serve.js  test-asm.js  verify-core.js
.github/workflows/: pages.yml
core/: .gitignore  Cargo.toml  README.md
core/examples/: run.rs
core/src/: cpu.rs  decode.rs  hex.rs  interrupts.rs  lib.rs  memory.rs  sampler.rs  scheduler.rs  timer.rs  wasm.rs
core/tests/: examples.rs  integration.rs
core/tests/fixtures/: README.md  blink.hex  eeprom_counter.hex  mux_counter.hex  seg_counter.hex
diagrams/: lab-counter.example.json
docs/: architecture.md  inspector-plan.md
examples/Another large/: TP 2022 - Ejemplo.asm  TP 2022 - Ejemplo.hex
examples/Larger one/: Solucion.hex  TP-turnos-solucion.asm
examples/Multiplication/: Multiplicacion.asm  mult.hex
examples/Simple one/: Punto A.asm  Punto A.hex
runtime/: README.md  asm.js  authoring.html  core-wasm.js  index.html  labs.js  manifest.json  sw.js
